everything.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: primary-domain-ingress
  annotations:
          kubernetes.io/ingress.global-static-ip-name: domain-endpoint
spec:
  rules:
  - host: wejlgaard.com
    http:
      paths:
      - backend:
          serviceName: wejlgaardcom-webserver
          servicePort: 80
  - host: www.wejlgaard.com
    http:
      paths:
      - backend:
          serviceName: wejlgaardcom-webserver
          servicePort: 80
  - host: rasmus.space
    http:
      paths:
      - backend:
          serviceName: wejlgaardcom-webserver
          servicePort: 80
  - host: www.zrw.io
    http:
      paths:
      - backend:
          serviceName: zrwio-webserver
          servicePort: 80
  - host: zrw.io
    http:
      paths:
      - backend:
          serviceName: zrwio-webserver
          servicePort: 80
  - host: redis.wejlgaard.com
    http:
      paths:
      - backend:
          serviceName: redis-service
          servicePort: 80
  - host: redis.zrw.io
    http:
      paths:
      - backend:
          serviceName: redis-service
          servicePort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: wejlgaardcom-webserver
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  type: NodePort
  selector:
    k8s-app: wejlgaardcom-webserver
---
apiVersion: v1
kind: Service
metadata:
  name: zrwio-webserver
  labels:
    k8s-app: zrwio-webserver
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  type: NodePort
  selector:
    k8s-app: zrwio-webserver
---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
spec:
  ports:
  - port: 80
    targetPort: 7379
    protocol: TCP
  type: NodePort
  selector:
    k8s-app: redis
